Fixed whitespace between end of footer and end of page

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -58,6 +58,8 @@ header h3{
 }
 #text {
 	text-align: center;
+	margin-bottom: 0px;
+	padding-bottom: 10px;
 }
 .flow{
 	display: grid;
